<resources>
    <string name="app_name">Template_Project</string>
    <string name="nav_ve_phim">Đặt vé theo phim</string>
    <string name="nav_ve_rap">Đặt vé theo rạp</string>
    <string name="nav_home">Trang chủ</string>
    <string name="nav_account">Tài khoản</string>
    <string name="nav_ticket">Vé của tôi</string>
    <string name="nav_login">Đăng nhập</string>
    <string name="nav_reqass">Đổi mật khẩu</string>
    <string name="nav_logout">Đăng xuất</string>
    <string name="rating">%.1f /5</string>
    <string name="total_raing">(%d Đánh giá)</string>
    <string name="duration">%d phút</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="warning_text">Vé đã mua sẽ <b><font color="#000000">không thể hoàn, hủy, đổi vé.</font></b> Bạn nhớ kiểm tra kỹ thông tin nha!</string>

</resources>