<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Group Header -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_vp"
            android:icon="@drawable/baseline_local_movies_24"
            android:title="@string/nav_ve_phim" />
        <item
            android:id="@+id/nav_vr"
            android:icon="@drawable/baseline_movie_24"
            android:title="@string/nav_ve_rap" />
    </group>

    <!-- Group Header with a custom title -->
    <item android:title="Tài khoản" >
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ticket"
                android:title="@string/nav_login" />
            <item
                android:id="@+id/nav_ticket"
                android:icon="@drawable/ticket"
                android:title="@string/nav_ticket" />
            <item
                android:id="@+id/nav_repass"
                android:icon="@drawable/baseline_password_24"
                android:title="@string/nav_reqass" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/log_out"
                android:title="@string/nav_logout" />
        </menu>
    </item>
</menu>
